@@ -1,3 +1,5 @@
+2006/4/19 -- released version 20060419_trunk
+
 2006/4/18 -- released version 20060418_trunk
 
 2006/4/17 -- released version 20060417_trunk
